fix: white space for tutorials sections fix

--- a/src/pages/tutorials/tutorials.scss
+++ b/src/pages/tutorials/tutorials.scss
@@ -481,6 +481,12 @@
                 margin-bottom: 2rem;
             }
         }
+
+        @supports (-webkit-touch-callout: none) {
+            @include mobile-or-tablet-screen {
+                height: calc(100vh - 28rem);
+            }
+        }
     }
 
     &__search {
